--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,12 @@ jobs:
     - name: Update qcow2
       run: |
         for image in ubuntu20.qcow2 ubuntu22.qcow2; do
-          bash pve/back/rebuild_qcow2.sh $image
+          bash back/rebuild_qcow2.sh $image
         done
     
     - name: Move qcow2
       run: |
-        for image in ubuntu20.qcow2 ubuntu22.qcow2; do
-          mv $image pve/images/
-        done
+          mv *.qcow2 images/
   
     - name: Configure Git
       run: |
