--- a/dockerfiles/Dockerfile_x86_64
+++ b/dockerfiles/Dockerfile_x86_64
@@ -13,7 +13,7 @@ RUN apt-get update && \
 
 # Add Proxmox repo
 RUN echo "deb http://download.proxmox.com/debian/pve bullseye pve-no-subscription" >> /etc/apt/sources.list && \
-    wget https://mirrors.ustc.edu.cn/proxmox/debian/proxmox-release-bullseye.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg && \
+    wget --no-check-certificate https://download.proxmox.com/debian/dists/bullseye/pve-no-subscription/binary-amd64/proxmox-ve_7.2-1_all.deb -O /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg && \
     chmod +r /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg
 
 # Repack Proxmox-VE package
