--- a/dockerfiles/Dockerfile_x86_64
+++ b/dockerfiles/Dockerfile_x86_64
@@ -11,8 +11,8 @@ RUN rm /etc/apt/sources.list && \
 RUN apt-get update && \
     apt-get install wget systemd nano vim curl gnupg ca-certificates -y
 
-# Add Proxmox repo
-RUN echo "deb http://download.proxmox.com/debian/pve bullseye pve-no-subscription" >> /etc/apt/sources.list && \
+#add proxmox repo
+RUN echo "deb http://mirrors.ustc.edu.cn/proxmox/debian/ bullseye pve-no-subscription" >>/etc/apt/sources.list && \
     wget --no-check-certificate https://mirrors.ustc.edu.cn/proxmox/debian/proxmox-release-bullseye.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg && \
     chmod +r /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg
 
