--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,4 +10,4 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: ['https://afdian.net/a/spiritlhl']
+custom: ['https://github.com/user-attachments/assets/0fd5d0c9-837f-45c1-8a56-f23f3d0bdbe7']
