--- a/extra_scripts/ifupdown2-install.service
+++ b/extra_scripts/ifupdown2-install.service
@@ -4,9 +4,9 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStartPre=/bin/sleep 5
+ExecStartPre=/usr/bin/env sleep 5
 ExecStart=/usr/local/bin/install_ifupdown2.sh
-ExecStartPost=/sbin/reboot
+ExecStartPost=/usr/bin/env reboot
 RemainAfterExit=yes
 
 [Install]
