fix: 修复不同发行版本的路径不同的问题

--- a/extra_scripts/clear_interface_route_cache.service
+++ b/extra_scripts/clear_interface_route_cache.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=oneshot
 ExecStart=/usr/local/bin/clear_interface_route_cache.sh
-ExecStartPost=/sbin/reboot
+ExecStartPost=/usr/bin/env reboot
 RemainAfterExit=yes
 
 [Install]
